- Added saving main window geometry into projman.conf file when close programm
- Fixed AutoComplite precedure for TCL/TK-projects
- Added colored icon for main window
- Fixed "Close all" procedure if opened files from projects and file browser
- Fixed parsing some procedure name like ::proc::name or proc_na::me(aa) and parameters {{} {} {}}
- Added opening last active project when project run

13.02.2018
- Added gray theme
- Fixed work with file from directory (FileBrowser function).


08.02.2018
- Auto indent added for () [] braces
- File Browser added. Now we will edited any file without project

07.02.2018
- Tcl, Perl, PHP highlight comment procedure fixed
- Help file Text.html utf-8 encoding
- Change hotkeys "Control+," "Control+." "Control+/" (commect selected, uncoment selected, select all)
- Add new function Comments/Uncomment selected text

05.02.2018
- Added binding mouse button: click on notebook tab highlight opened file name in tree
- Change "Paste from Clipboard" function
- Change popup editor menu (undo, redo, copy, paste, cut functions)
- Change Logo and About dialog
- Russian help files was conerting into utf-8 encode
- Change help file load procedure

04.02.2018
- Fixed paste text highlight
- Fixed setting edited flag when paste the text from buffer

22/01/2018
- Remove ctags support
- Added gitk (gui for git) support

11/01/2018
- Changes color setting dialog into "Setting"
- Actualizing information into "About" dialog 
- Corrected color settings for all widgets
- Change default color scheme
- Remove ctag, change autocomplitt procedure

0.4.4

19/10/2015
- Fixed install.tcl script

0.3.7

18/10/2007
-Added text encoding support from koi8-r,cpp1251,cp866 to UTF-8

20/02/2007
- Fixed settings dialog
- Fixed saved  settings parameter

27/01/2006

- Remove SuperText widget now use native TEXT

29/12/2005
- Added RUBY projects support
- Fixed remove project if some files is open in editor